--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,14 @@
-<header>
+<header class="head">
     <nav>
         <a href="../index.html">
-            <img src="img/icon-voltar.svg" alt="icone de voltar" />
+            <img src="../../assets/images/icon-voltar.svg" alt="icone de voltar" />
         </a>
         <a>
             <h5>Menu</h5>
         </a>
     </nav>
     <section class="container-fluid" id="bemvindo">
-        <img class="rounded-circle" src="img/fotoPerfil.png" width="65" height="60">
+        <img class="rounded-circle" src="../../assets/images/fotoPerfil.png" width="65" height="60">
         <div>
             <span>Bem-vindo de volta</span>
             <h5>Evert</h5>
