--- a/src/app/sp02-menu-inicial/sp02-menu-inicial.component.html
+++ b/src/app/sp02-menu-inicial/sp02-menu-inicial.component.html
@@ -1,54 +1,54 @@
-<main>
-		
+
+<main class="head">
     <section class="content-box">
         <section>
             <h4 id="tituloMenu">Serviços</h4><br>
         </section>
-        <a routerLink="/sp04-credito-imobiliario" routerLinkActive="active">
+        <a class="link" routerLink="/sp04-credito-imobiliario" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
-                    <img class="rounded-circle" src="img/casa.png" width="54" height="57">
+                    <img class="rounded-circle" src="../../assets/images/casa.png" width="54" height="57">
                     <h5>Crédito Imobiliário</h5>
                 </section>
             </article>
         </a>
-        <a routerLink="/sp05-financiamento-de-carros" routerLinkActive="active">
+        <a class="link" routerLink="/sp05-financiamento-de-carros" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
-                    <img class="rounded-circle" src="img/carro.png" width="50rem" height="50rem" alt="foto perfil" />
+                    <img class="rounded-circle" src="../../assets/images/carro.png" width="50rem" height="50rem" alt="foto perfil" />
                     <h5>Financiamento de Carros</h5>
                 </section>
             </article>
         </a>
-        <a routerLink="/sp06-financiamento-de-smartphone" routerLinkActive="active">
+        <a class="link" routerLink="/sp06-financiamento-de-smartphone" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
-                    <img class="rounded-circle" src="img/celular.png" width="50rem" height="50rem" alt="foto perfil" />
+                    <img class="rounded-circle" src="../../assets/images/celular.png" width="50rem" height="50rem" alt="foto perfil" />
                     <h5>Financiamento de Smartphone</h5>
                 </section>
             </article>
         </a>
-        <a routerLink="/sp07-credito-pessoal" routerLinkActive="active">
+        <a class="link" routerLink="/sp07-credito-pessoal" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
-                    <img class="rounded-circle" src="img/mao.png" width="50rem" height="50rem" alt="foto perfil" />
+                    <img class="rounded-circle" src="../../assets/images/mao.png" width="50rem" height="50rem" alt="foto perfil" />
                     <h5>Crédito Pessoal</h5>
                 </section>
             </article>
         </a>
-        <a routerLink="/sp08-financiamento-ideal" routerLinkActive="active">
+        <a class="link" routerLink="/sp08-financiamento-ideal" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
-                    <img class="rounded-circle" src="img/lampada.png" width="50rem" height="50rem" alt="foto perfil" />
+                    <img class="rounded-circle" src="../../assets/images/lampada.png" width="50rem" height="50rem" alt="foto perfil" />
                     <h5>Financiamento ideal</h5>
                 </section>
             </article>
         </a>
 
-        <a routerLink="/sp04-credito-imobiliario" routerLinkActive="active">
+        <a class="link" routerLink="/sp04-credito-imobiliario" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
-                    <img class="rounded-circle" src="img/handshake-regular.svg" width="50rem" height="50rem" alt="foto perfil" />
+                    <img class="rounded-circle" src="../../assets/images/handshake-regular.svg" width="50rem" height="50rem" alt="foto perfil" />
                     <h5>Renegociação</h5>
                 </section>
             </article>
