--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<app-sp02-menu-inicial></app-sp02-menu-inicial>
+<app-header>
+</app-header>
 <router-outlet></router-outlet>
+
