alterações css e add page renegociacao

--- a/src/app/sp01-introducao-ao-credito/sp01-introducao-ao-credito.component.html
+++ b/src/app/sp01-introducao-ao-credito/sp01-introducao-ao-credito.component.html
@@ -1,23 +1,4 @@
-<body>
-    <header>
-        <nav>
-            <a>
-                <img src="[SP01]-introducao-ao-credito/icon-voltar.svg" alt="icone de voltar" />
-            </a>
-            <a>
-                <h5>Crédito</h5>
-            </a>
-        </nav>
-        <section class="container-fluid" id="bemvindo">
-            <img class="rounded-circle" src="[SP01]-introducao-ao-credito/fotoPerfil.png" width="65" height="60">
-            <div>
-                <span>Bem-vindo</span>
-                <h5>Evert</h5>
-            </div>
-        </section>
-    </header>
-
-    <main>
+<main>
         <section class="content-box">
             <section class="container" alt="texto principal">
                 <h4>Introdução ao Crédito</h4>
@@ -58,10 +39,9 @@
                 </article>
                 <br>
                 <div class="d-grid gap-2 col-6 mx-auto">
-                    <a href= "[SP02] - Menu/Menu.html"><button href= "[SP02] - Menu/Menu.html" class="btn btn-warning d-grid gap-2 col-6 mx-auto" type="button">Avançar</button></a>
+                    <a routerLink="/sp02-menu-inicial" ><button class="btn btn-warning d-grid gap-2 col-6 mx-auto" type="button">Avançar</button></a>
                     <a><button class="btn btn-warning d-grid gap-2 col-6 mx-auto" type="button">Entrar em Contato</button><br></a>
                 </div>
             </section>
         </section>
     </main>
-</body>
