--- a/src/app/sp07-credito-pessoal/sp07-credito-pessoal.component.html
+++ b/src/app/sp07-credito-pessoal/sp07-credito-pessoal.component.html
@@ -3,7 +3,7 @@
         <h2>Crédito Disponível</h2>
         <div class="saldo">
         <p id='container'>R$ 25.000,00 </p>  
-        <span id="action" class="btn btn-light"><img id="teste" value="olho" src="img/EyeSlash.svg" alt="icone de visibilidade"></span>         
+        <span id="action" class="btn btn-light"><img id="teste" value="olho" src="../../assets/images/EyeSlash.svg" alt="icone de visibilidade"></span>         
         </div>
     </section>
 
