--- a/src/app/sp02-menu-inicial/sp02-menu-inicial.component.html
+++ b/src/app/sp02-menu-inicial/sp02-menu-inicial.component.html
@@ -4,6 +4,16 @@
         <section>
             <h4 id="tituloMenu">Serviços</h4><br>
         </section>
+
+        <a class="link" routerLink="/sp03-renegociacao" routerLinkActive="active">
+            <article>
+                <section class="container" id="menu">
+                    <img class="rounded-circle" src="../../assets/images/handshake-regular.svg" width="50rem" height="50rem" alt="foto perfil" />
+                    <h5>Renegociação</h5>
+                </section>
+            </article>
+        </a>
+
         <a class="link" routerLink="/sp04-credito-imobiliario" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
@@ -12,6 +22,7 @@
                 </section>
             </article>
         </a>
+
         <a class="link" routerLink="/sp05-financiamento-de-carros" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
@@ -20,6 +31,7 @@
                 </section>
             </article>
         </a>
+
         <a class="link" routerLink="/sp06-financiamento-de-smartphone" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
@@ -28,6 +40,7 @@
                 </section>
             </article>
         </a>
+
         <a class="link" routerLink="/sp07-credito-pessoal" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
@@ -36,20 +49,12 @@
                 </section>
             </article>
         </a>
+        
         <a class="link" routerLink="/sp08-financiamento-ideal" routerLinkActive="active">
             <article>
                 <section class="container" id="menu">
                     <img class="rounded-circle" src="../../assets/images/lampada.png" width="50rem" height="50rem" alt="foto perfil" />
                     <h5>Financiamento ideal</h5>
-                </section>
-            </article>
-        </a>
-
-        <a class="link" routerLink="/sp04-credito-imobiliario" routerLinkActive="active">
-            <article>
-                <section class="container" id="menu">
-                    <img class="rounded-circle" src="../../assets/images/handshake-regular.svg" width="50rem" height="50rem" alt="foto perfil" />
-                    <h5>Renegociação</h5>
                 </section>
             </article>
         </a>
