--- a/src/app/sp06-financiamento-de-smartphone/sp06-financiamento-de-smartphone.component.html
+++ b/src/app/sp06-financiamento-de-smartphone/sp06-financiamento-de-smartphone.component.html
@@ -1,4 +1,4 @@
-<section class="content-box">
+<section class="smartphoneSection">
   <section>
     <h2>Agora conte mais sobre o smartphone</h2>
   </section>
