--- a/src/app/sp05-financiamento-de-carros/sp05-financiamento-de-carros.component.css
+++ b/src/app/sp05-financiamento-de-carros/sp05-financiamento-de-carros.component.css
@@ -17,7 +17,7 @@ main p {
 h1{
     display: flex;
     justify-content: center;
-    color: #FFFFFF;
+    color: #000000;
     font-size: 2.0rem;
     text-align: center;
 }
